--- a/en/agricliometrics/css/styles.css
+++ b/en/agricliometrics/css/styles.css
@@ -221,59 +221,6 @@ nav a:hover{
     opacity: 1;
     transition: opacity 250ms ease-in-out 250ms;
 }
-
-/* Dropdown Button */
-.dropbtn {
-    display: flex;
-    align-items: center;
-    background-color: #f1f1f1;
-    color: #000;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-  }
-  
-  /* Dropdown button on hover & focus */
-  .dropbtn:hover, .dropbtn:focus {
-    background-color: #fff;
-    color:#000;
-  }
-  
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-    position: relative;
-    display: flex;
-    justify-content: flex-end;
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 120px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 999;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {
-    background-color: #ddd;
-}
-  
-  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-  .show {
-    display:block;
-}
-
 /*=========================================================*/
 #llamado, #calendario, #comite {
     margin-top: 2em;
@@ -356,10 +303,7 @@ nav a:hover{
 
 .material-symbols-outlined{
     font-size: 5rem;
-}
-
-.material-symbols-outlined.idioma{
-    font-size:1.3rem;
+    padding-top: 1.2em;
 }
 
 .resumen .material-symbols-outlined span{
@@ -518,9 +462,7 @@ footer{
         ul.icons li .icon:before {
             font-size: 2em;
         }
-  .image-footer{
-        width:100%;
-  }
+  
 
 /*======fin mobile first====*/
 
@@ -643,10 +585,6 @@ h4 a{
 }
 .logo-container{
     max-width: 25%;
-}
-.image-footer{
-    width:50%;
-    margin: 0 auto;
 }
 
 }
